--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap-vue": "^2.15.0",
+    "cos-nodejs-sdk-v5": "^2.9.4",
     "moment": "^2.26.0",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.0.0",
