--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "moment": "^2.26.0",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.0.0",
-    "sweetalert2": "^9.15.1"
+    "sweetalert2": "^9.15.1",
+    "vue": "^2.6.12"
   },
   "devDependencies": {}
 }
