--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nuxt": "^3.6.5"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.0",
+    "ant-design-vue": "^4.0.3",
     "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
